replaced ArrayList with LinkedList in CostOfLinkingTrainsProblem